--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
