利用模板测试为物体描边

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -61,5 +61,11 @@
     <None Include="light.frag">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\shaderSingleColor.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\shaderSingleColor.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
