--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -161,6 +161,8 @@
   <ItemGroup>
     <None Include="light.frag" />
     <None Include="light.vert" />
+    <None Include="Shaders\screenShader.frag" />
+    <None Include="Shaders\screenShader.vert" />
     <None Include="Shaders\shader.fs" />
     <None Include="Shaders\shader.vs" />
     <None Include="Shaders\shader.frag" />
