--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -67,5 +67,11 @@
     <None Include="Shaders\shaderSingleColor.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\screenShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\screenShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
