--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -160,8 +160,19 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assimp-vc140-mt.dll" />
     <None Include="light.frag" />
     <None Include="light.vert" />
+    <None Include="Shaders\8.advanced_glsl.vs" />
+    <None Include="Shaders\8.blue.fs" />
+    <None Include="Shaders\8.green.fs" />
+    <None Include="Shaders\8.red.fs" />
+    <None Include="Shaders\8.yellow.fs" />
+    <None Include="Shaders\light.frag" />
+    <None Include="Shaders\light.vert" />
+    <None Include="Shaders\pointShader.frag" />
+    <None Include="Shaders\pointShader.geom" />
+    <None Include="Shaders\pointShader.vert" />
     <None Include="Shaders\screenShader.frag" />
     <None Include="Shaders\screenShader.vert" />
     <None Include="Shaders\shader.fs" />
@@ -172,6 +183,7 @@
     <None Include="Shaders\shaderSingleColor.vert" />
     <None Include="Shaders\skybox.frag" />
     <None Include="Shaders\skybox.vert" />
+    <None Include="zlib.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
