--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -75,5 +75,27 @@
     </None>
     <None Include="Shaders\skybox.vert" />
     <None Include="Shaders\skybox.frag" />
+    <None Include="Shaders\8.advanced_glsl.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\8.blue.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\8.green.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\8.red.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\8.yellow.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\light.frag" />
+    <None Include="Shaders\light.vert" />
+    <None Include="assimp-vc140-mt.dll" />
+    <None Include="zlib.dll" />
+    <None Include="Shaders\pointShader.vert" />
+    <None Include="Shaders\pointShader.frag" />
+    <None Include="Shaders\pointShader.geom" />
   </ItemGroup>
 </Project>
