利用几何着色器进行法线可视化

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -98,5 +98,7 @@
     <None Include="Shaders\pointShader.frag" />
     <None Include="Shaders\pointShader.geom" />
     <None Include="Shaders\explodeShader.geom" />
+    <None Include="Shaders\normalShader.geom" />
+    <None Include="Shaders\normalShader.frag" />
   </ItemGroup>
 </Project>
