--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -171,6 +171,8 @@
     <None Include="Shaders\explodeShader.geom" />
     <None Include="Shaders\light.frag" />
     <None Include="Shaders\light.vert" />
+    <None Include="Shaders\normalShader.frag" />
+    <None Include="Shaders\normalShader.geom" />
     <None Include="Shaders\pointShader.frag" />
     <None Include="Shaders\pointShader.geom" />
     <None Include="Shaders\pointShader.vert" />
