实例化渲染多个四边形

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -176,6 +176,8 @@
     <None Include="Shaders\pointShader.frag" />
     <None Include="Shaders\pointShader.geom" />
     <None Include="Shaders\pointShader.vert" />
+    <None Include="Shaders\quadInstance.frag" />
+    <None Include="Shaders\quadInstance.vert" />
     <None Include="Shaders\screenShader.frag" />
     <None Include="Shaders\screenShader.vert" />
     <None Include="Shaders\shader.fs" />
