渲染阴影贴图并显示

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -165,6 +165,8 @@
     <None Include="light.vert" />
     <None Include="Shaders\1.advanced_lighting.fs" />
     <None Include="Shaders\1.advanced_lighting.vs" />
+    <None Include="Shaders\3.1.1.debug_quad.vs" />
+    <None Include="Shaders\3.1.1.debug_quad_depth.fs" />
     <None Include="Shaders\8.advanced_glsl.vs" />
     <None Include="Shaders\8.blue.fs" />
     <None Include="Shaders\8.green.fs" />
@@ -190,6 +192,8 @@
     <None Include="Shaders\shader.vert" />
     <None Include="Shaders\shaderSingleColor.frag" />
     <None Include="Shaders\shaderSingleColor.vert" />
+    <None Include="Shaders\simpleDepthShader.frag" />
+    <None Include="Shaders\simpleDepthShader.vert" />
     <None Include="Shaders\skybox.frag" />
     <None Include="Shaders\skybox.vert" />
     <None Include="zlib.dll" />
