平面手动计算切线的法线贴图

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -160,5 +160,7 @@
     <None Include="Shaders\CubeDepthShader.frag" />
     <None Include="Shaders\CubeShadowMapping.frag" />
     <None Include="Shaders\CubeShadowMapping.vert" />
+    <None Include="Shaders\normalMapping.vert" />
+    <None Include="Shaders\normalMapping.frag" />
   </ItemGroup>
 </Project>
