--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -201,6 +201,8 @@
     <None Include="Shaders\normalMapping.vert" />
     <None Include="Shaders\normalShader.frag" />
     <None Include="Shaders\normalShader.geom" />
+    <None Include="Shaders\ParallaxMapping.frag" />
+    <None Include="Shaders\ParallaxMapping.vert" />
     <None Include="Shaders\pointShader.frag" />
     <None Include="Shaders\pointShader.vert" />
     <None Include="Shaders\quadInstance.frag" />
