--- a/LearnOpenGLProject/imgui.ini
+++ b/LearnOpenGLProject/imgui.ini
@@ -5,6 +5,11 @@ Collapsed=0
 
 [Window][Light]
 Pos=58,108
-Size=339,148
+Size=339,177
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
 Collapsed=0
 
