加入HDR色调映射

--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj.filters
@@ -164,5 +164,7 @@
     <None Include="Shaders\normalMapping.frag" />
     <None Include="Shaders\ParallaxMapping.vert" />
     <None Include="Shaders\ParallaxMapping.frag" />
+    <None Include="Shaders\lighting.vert" />
+    <None Include="Shaders\lighting.frag" />
   </ItemGroup>
 </Project>
