--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -197,6 +197,8 @@
     <None Include="Shaders\light.frag" />
     <None Include="Shaders\light.geom" />
     <None Include="Shaders\light.vert" />
+    <None Include="Shaders\lighting.frag" />
+    <None Include="Shaders\lighting.vert" />
     <None Include="Shaders\normalMapping.frag" />
     <None Include="Shaders\normalMapping.vert" />
     <None Include="Shaders\normalShader.frag" />
