--- a/LearnOpenGLProject/imgui.ini
+++ b/LearnOpenGLProject/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Light]
-Pos=58,108
-Size=339,224
+Pos=61,542
+Size=339,201
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=650,20
 Size=550,680
+Collapsed=0
+
+[Window][Set]
+Pos=60,60
+Size=339,163
 Collapsed=0
 
