--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -215,6 +215,8 @@
     <None Include="Shaders\ParallaxMapping.vert" />
     <None Include="Shaders\PBR.frag" />
     <None Include="Shaders\PBR.vert" />
+    <None Include="Shaders\PBRTexture.frag" />
+    <None Include="Shaders\PBRTexture.vert" />
     <None Include="Shaders\pointShader.frag" />
     <None Include="Shaders\pointShader.vert" />
     <None Include="Shaders\quadInstance.frag" />
