--- a/LearnOpenGLProject/LearnOpenGLProject.vcxproj
+++ b/LearnOpenGLProject/LearnOpenGLProject.vcxproj
@@ -202,6 +202,8 @@
     <None Include="Shaders\explodeShader.geom" />
     <None Include="Shaders\g_buffer.frag" />
     <None Include="Shaders\g_buffer.vert" />
+    <None Include="Shaders\irradiance_convolution.frag" />
+    <None Include="Shaders\irradiance_convolution.vert" />
     <None Include="Shaders\light.frag" />
     <None Include="Shaders\light.geom" />
     <None Include="Shaders\light.vert" />
@@ -240,6 +242,8 @@
     <None Include="Shaders\SSAO.vert" />
     <None Include="Shaders\SSAOBlur.frag" />
     <None Include="Shaders\SSAOBlur.vert" />
+    <None Include="Shaders\ToCubeMap.frag" />
+    <None Include="Shaders\ToCubeMap.vert" />
     <None Include="zlib.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
